# actix-mod

./: .env  Cargo.toml  db.sqlite  http.http  schema.sql
src/: main.rs
src/api/: auth.rs  public.rs  users.rs
src/chatserver/: server.rs
src/handlers/auth/: get_user.rs  logout.rs  mod.rs
src/handlers/chat/: mod.rs
src/handlers/file/: file_async.rs  mod.rs
src/handlers/public/: login.rs  register.rs
src/handlers/users/: add_user.rs  delete_user.rs  get_user.rs  mod.rs
src/middleware/: auth.rs
src/models/: auth.rs  errors.rs  state.rs
src/utils/: db.rs  guard.rs  jwt.rs
