[package]
name = "actix-mods"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = {version = "1.0.219", features = ["derive"]}
derive_more = "0.99.18"
serde_json = "1.0.140"


# logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"


#env vars
dotenv = "0.15"

#db
sqlx = {version="0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"]}

##uuid
uuid = {version = "1.2", features = ["serde", "v4"]}