[package]
name = "actix-mods"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = {version = "1.0.219", features = ["derive"]}
derive_more = "0.99.18"
serde_json = "1.0.140"


# logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"


#env vars
dotenv = "0.15"
jsonwebtoken = "9.3"

#db
sqlx = {version="0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"]}

##uuid
uuid = {version = "1.2", features = ["serde", "v4"]}
futures-util = "0.3"
actix-ws = "0.3"

#file handling
actix-files = "0.6.6"
actix-multipart = "0.7.2"
tokio = "1.47.1"
sanitize-filename = "0.6"


#cron
cron = "0.12.1"
chrono = "0.4.38"